[project]
name = "book-buliding-checker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.1.0",
    "langgraph>=1.0.4",
    "streamlit>=1.51.0",
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "pillow>=10.0.0",
    "html-to-markdown>=2.9.2",
    "langchain-google-vertexai>=3.1.0",
    "langchain-google-genai>=3.2.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
